--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -235,6 +235,11 @@ p {
     color: $darker-grey;
     margin-bottom: 1px;
   }
+  .publication-conference {
+    font-size: 14px;
+    color: $darker-grey;
+    margin-bottom: 1px;
+  }
   .publications-section {
     .intro {
       margin-bottom: 30px;
