--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -226,7 +226,7 @@ p {
   .publication-title {
     font-size: 16px;
     font-weight: 400;
-    color: $text-color;
+    color: $black;
     margin-bottom: 1px;
   }
   .publication-authors {
