--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -229,6 +229,11 @@ p {
     color: $black;
     margin-bottom: 1px;
   }
+  .publication-link {
+    font-size: 16px;
+    color: $black;
+    margin-bottom: 1px;
+  }
   .publication-authors {
     font-size: 16px;
     font-style: italic;
