Add pub-conference font style.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -240,6 +240,11 @@ p {
     color: $darker-grey;
     margin-bottom: 1px;
   }
+  .publication-conference {
+    font-size: 14px;
+    color: $text-color-secondary;
+    margin-bottom: 1px;
+  }
   .publications-section {
     .intro {
       margin-bottom: 30px;
