--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -18,11 +18,16 @@
 
   {% for publication in publications.papers %}
   <div class="item">
+<!--    
     {% if publication.link %}
       <li><a href="{{ publication.link }}">{{ publication.title }}</a></li>
+-->
+    <div class="publication-title"><li><a href="{{ publication.link }}">{{ publication.title }}</a></li>
+<!--    
     {% else %}
       <li>{{ publication.title }}</li>
     {% endif %}
+-->
     <div class="publication-authors">{{ publication.authors }}</div>
     <div class="publication-conference">{{ publication.conference }}</div>
   </div><!--//item-->
