--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+      <!-- <div class="footer-col footer-col-1">
         <h4>CONTACT</h4>
 
         <div class="social-links">
@@ -24,7 +24,7 @@
 
           {% endfor %}
         </div>
-      </div>
+      </div> -->
 
       <div class="footer-col footer-col-2">
         {% if site.footer.follow and site.footer.follow.size > 0 %}
