--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -7,18 +7,18 @@
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="publication">
+        <div class="Misc">
           <h1 class="page-heading">{{ page.title }}</h1>
           {{ content }}
 
           {% for item in page.items %}
-          <div class="publication-item">
+          <div class="work-item">
             <img
               src="{{ item.image.src | absolute_url }}"
               alt="{{ item.image.alt }}"
-              class="publication-bubble"
+              class="work-bubble"
             />
-            <span class="publication-text">
+            <span class="work-text">
               <strong>{{ item.title }}</strong>
               &mdash;
               {{ item.description }}
