--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <head>
+    <style>
+      h1 {
+          font-size: 2em;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+      }
 
+      h2 {
+          font-size: 1.75em;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+      }
+
+      h3 {
+          font-size: 1.5em;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+      }
+      
+      h4 {
+        font-size: 1.25em;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+      }
+      
+      h5 {
+          font-size: 1em;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+      }
+      
+      h6 {
+          font-size: 0.875em;
+          font-weight: bold;
+          margin-bottom: 0.5em;
+      }
+    </style>
+  </head>
   <body>
     {% include header.html %}
 
