--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,41 +3,41 @@
   {% include head.html %}
   <head>
     <style>
-      h1 {
-          font-size: 1.75em;
-          font-weight: bold;
-          margin-bottom: 0.5em;
-      }
-
-      h2 {
-          font-size: 1.5em;
-          font-weight: bold;
-          margin-bottom: 0.5em;
-      }
-
-      h3 {
-          font-size: 1.25em;
-          font-weight: bold;
-          margin-bottom: 0.5em;
-      }
-
-      h4 {
-        font-size: 1em;
+      body h1 {
+        font-size: 2em !important;
         font-weight: bold;
         margin-bottom: 0.5em;
-      }
-      
-      h5 {
-          font-size: 0.75em;
-          font-weight: bold;
-          margin-bottom: 0.5em;
-      }
-      
-      h6 {
-          font-size: 0.5em;
-          font-weight: bold;
-          margin-bottom: 0.5em;
-      }
+    }
+    
+    body h2 {
+        font-size: 1.75em !important;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
+    
+    body h3 {
+        font-size: 1.5em !important;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
+    
+    body h4 {
+        font-size: 1.25em !important;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
+    
+    body h5 {
+        font-size: 1em !important;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
+    
+    body h6 {
+        font-size: 0.875em !important;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
     </style>
   </head>
   <body>
