--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrapper">
     <a class="site-title" href="{{ "" | prepend: site.baseurl | prepend: site.url }}/">
-      <img src="{{ "/assets/img/gangmuk.pdf" | absolute_url }}" alt="{{ site.title }}" />
+      <img src="{{ "/assets/img/gangmuk.png" | absolute_url }}" alt="{{ site.title }}" />
     </a>
 
     <nav class="site-nav">
