--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -2,30 +2,32 @@
   <style>
     .album {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
       margin: 20px;
     }
 
     .album-item {
       border: 1px solid #ddd;
-      border-radius: 10px;
+      border-radius: 5px;
       overflow: hidden;
       background: #fff;
-      padding: 10px;
+      padding: 5px;
       text-align: center;
     }
 
     .album-image {
       width: 100%;
-      height: auto;
+      height: 100px;
+      object-fit: cover;
       border-bottom: 1px solid #ddd;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .album-info h3 {
-      margin: 10px 0;
+      margin: 5px 0;
       font-size: 1.2em;
+      color: #555;
     }
 
     .album-info p {
@@ -35,7 +37,7 @@
     }
 
     iframe {
-      margin-top: 10px;
+      margin-top: 5px;
       max-width: 100%;
     }
   </style>
