--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -18,7 +18,7 @@
 
     .album-image {
       width: 100%;
-      height: 100px;
+      height: auto;
       object-fit: cover;
       border-bottom: 1px solid #ddd;
       margin-bottom: 5px;
