--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -36,26 +36,42 @@
       color: #555;
     }
   </style>
+
   <div style="display: block;">
     Debug info:
-    {% if site.data.photos %}
-      <p>Number of photos: {{ site.data.photos | size }}</p>
+    {% if page.items %}
+      <p>Number of photos: {{ page.items | size }}</p>
     {% else %}
-      <p>No photos found in site.data.photos</p>
+      <p>No photos found in page.items</p>
     {% endif %}
   </div>
 
-  {% for photo in site.data.photos %}
+  {% for item in page.items %}
     <div class="album-item">
       <img 
-        src="{{ photo.src }}" 
-        alt="{{ photo.alt }}" 
+        src="{{ item.image.src }}" 
+        alt="{{ item.image.alt }}" 
         class="album-image" 
         onerror="console.log('Failed to load:', this.src);"
       />
       <div class="album-info">
-        <h3>{{ photo.title }}</h3>
+        <h3>{{ item.title }}</h3>
+        {% if item.description %}
+          <p>{{ item.description }}</p>
+        {% endif %}
       </div>
+      {% if item.video %}
+        <div class="video-container">
+          <iframe 
+            width="100%" 
+            height="200" 
+            src="{{ item.video }}" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
+      {% endif %}
     </div>
   {% endfor %}
 </div>
