changed font for blog post
Signed-off-by: “Gangmuk <gangmuk@gmail.com>

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -36,6 +36,7 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+  font-family: Helvetica, sans-serif;
   width: 100%;
   h2 {
     font-size: 32px;
