--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,3 +33,32 @@ $on-laptop: 800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "base", "layout", "site", "work", "blog", "post", "404";
+
+/* Custom styles for blog posts */
+.post-content {
+    h1, h2, h3, h4, h5, h6 {
+      font-family: Helvetica, sans-serif;
+      font-weight: 600;
+    }
+    
+    pre, code {
+      font-family: Consolas, Monaco, "Courier New", monospace;
+      font-size: 14px;
+      line-height: 1.4;
+    }
+    
+    pre {
+      padding: 10px;
+      background-color: #f5f5f5;
+      border: 1px solid #eee;
+      border-radius: 4px;
+      overflow-x: auto;
+      
+      > code {
+        border: 0;
+        padding: 0;
+        font-size: 14px;
+        background-color: transparent;
+      }
+    }
+  }
