code block theme again...
Signed-off-by: “Gangmuk <gangmuk@gmail.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,5 +72,6 @@
   </script>
   <script async src="https://www.google-analytics.com/analytics.js"></script>
 
+  <link rel="stylesheet" href="{{ "/assets/css/syntax-highlighting.css" | absolute_url }}"/>
 
 </head>
