--- a/assets/css/syntax-highlighting.css
+++ b/assets/css/syntax-highlighting.css
@@ -1,90 +1,105 @@
-.highlight .hll { background-color: #49483e }
-.highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-.highlight .k { color: #66d9ef } /* Keyword */
-.highlight .l { color: #ae81ff } /* Literal */
-.highlight .n { color: #f8f8f2 } /* Name */
-.highlight .o { color: #f92672 } /* Operator */
-.highlight .p { color: #f8f8f2 } /* Punctuation */
-.highlight .cm { color: #75715e } /* Comment.Multiline */
-.highlight .cp { color: #75715e } /* Comment.Preproc */
-.highlight .c1 { color: #75715e } /* Comment.Single */
-.highlight .cs { color: #75715e } /* Comment.Special */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
-.highlight .kn { color: #f92672 } /* Keyword.Namespace */
-.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
-.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
-.highlight .kt { color: #66d9ef } /* Keyword.Type */
-.highlight .ld { color: #e6db74 } /* Literal.Date */
-.highlight .m { color: #ae81ff } /* Literal.Number */
-.highlight .s { color: #e6db74 } /* Literal.String */
-.highlight .na { color: #a6e22e } /* Name.Attribute */
-.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
-.highlight .nc { color: #a6e22e } /* Name.Class */
-.highlight .no { color: #66d9ef } /* Name.Constant */
-.highlight .nd { color: #a6e22e } /* Name.Decorator */
-.highlight .ni { color: #f8f8f2 } /* Name.Entity */
-.highlight .ne { color: #a6e22e } /* Name.Exception */
-.highlight .nf { color: #a6e22e } /* Name.Function */
-.highlight .nl { color: #f8f8f2 } /* Name.Label */
-.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #a6e22e } /* Name.Other */
-.highlight .py { color: #f8f8f2 } /* Name.Property */
-.highlight .nt { color: #f92672 } /* Name.Tag */
-.highlight .nv { color: #f8f8f2 } /* Name.Variable */
-.highlight .ow { color: #f92672 } /* Operator.Word */
-.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
-.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
-.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
-.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
-.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
-.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
-.highlight .sc { color: #e6db74 } /* Literal.String.Char */
-.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
-.highlight .se { color: #ae81ff } /* Literal.String.Escape */
-.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
-.highlight .sx { color: #e6db74 } /* Literal.String.Other */
-.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
-.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
-.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
-
-/* Make code blocks a dark color with light text (Monokai style) */
 .highlight {
-  background-color: #272822;
-  color: #f8f8f2;
-  border-radius: 5px;
-  margin: 20px 0;
-  padding: 10px;
-  overflow-x: auto;
-}
-
-pre.highlight {
-  border: none;
-  margin: 0;
-  padding: 10px;
-}
-
-code {
-  font-family: "JetBrains Mono", Consolas, Monaco, "Courier New", monospace;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-/* Style for inline code */
-p code, li code, td code {
-  background-color: #f5f5f5;
-  color: #d14;
-  padding: 2px 4px;
-  border-radius: 3px;
-  font-size: 0.9em;
-}
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    margin: 20px 0;
+    padding: 15px;
+    overflow-x: auto;
+  }
+  
+  .highlight pre {
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .highlight code {
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #333;
+  }
+  
+  /* Base Style */
+  .highlight .c { color: #998; font-style: italic; } /* Comment */
+  .highlight .err { color: #a61717; background-color: #e3d2d2; } /* Error */
+  .highlight .k { color: #d73a49; font-weight: bold; } /* Keyword */
+  .highlight .o { color: #000000; font-weight: bold; } /* Operator */
+  .highlight .cm { color: #998; font-style: italic; } /* Comment.Multiline */
+  .highlight .cp { color: #999; font-weight: bold; } /* Comment.Preproc */
+  .highlight .c1 { color: #998; font-style: italic; } /* Comment.Single */
+  .highlight .cs { color: #999; font-weight: bold; font-style: italic; } /* Comment.Special */
+  .highlight .gd { color: #000; background-color: #fdd; } /* Generic.Deleted */
+  .highlight .gd .x { color: #000; background-color: #faa; } /* Generic.Deleted.Specific */
+  .highlight .ge { font-style: italic; } /* Generic.Emph */
+  .highlight .gr { color: #a00; } /* Generic.Error */
+  .highlight .gh { color: #999; } /* Generic.Heading */
+  .highlight .gi { color: #000; background-color: #dfd; } /* Generic.Inserted */
+  .highlight .gi .x { color: #000; background-color: #afa; } /* Generic.Inserted.Specific */
+  .highlight .go { color: #888; } /* Generic.Output */
+  .highlight .gp { color: #555; } /* Generic.Prompt */
+  .highlight .gs { font-weight: bold; } /* Generic.Strong */
+  .highlight .gu { color: #aaa; } /* Generic.Subheading */
+  .highlight .gt { color: #a00; } /* Generic.Traceback */
+  .highlight .kc { color: #d73a49; font-weight: bold; } /* Keyword.Constant */
+  .highlight .kd { color: #d73a49; font-weight: bold; } /* Keyword.Declaration */
+  .highlight .kp { color: #d73a49; font-weight: bold; } /* Keyword.Pseudo */
+  .highlight .kr { color: #d73a49; font-weight: bold; } /* Keyword.Reserved */
+  .highlight .kt { color: #d73a49; font-weight: bold; } /* Keyword.Type */
+  .highlight .m { color: #005cc5; } /* Literal.Number */
+  .highlight .s { color: #032f62; } /* Literal.String */
+  .highlight .na { color: #6f42c1; } /* Name.Attribute */
+  .highlight .nb { color: #0086B3; } /* Name.Builtin */
+  .highlight .nc { color: #6f42c1; font-weight: bold; } /* Name.Class */
+  .highlight .no { color: #6f42c1; } /* Name.Constant */
+  .highlight .ni { color: #800080; } /* Name.Entity */
+  .highlight .ne { color: #900; font-weight: bold; } /* Name.Exception */
+  .highlight .nf { color: #6f42c1; font-weight: bold; } /* Name.Function */
+  .highlight .nn { color: #555; } /* Name.Namespace */
+  .highlight .nt { color: #22863a; } /* Name.Tag */
+  .highlight .nv { color: #005cc5; } /* Name.Variable */
+  .highlight .ow { color: #000000; font-weight: bold; } /* Operator.Word */
+  .highlight .w { color: #bbb; } /* Text.Whitespace */
+  .highlight .mf { color: #005cc5; } /* Literal.Number.Float */
+  .highlight .mh { color: #005cc5; } /* Literal.Number.Hex */
+  .highlight .mi { color: #005cc5; } /* Literal.Number.Integer */
+  .highlight .mo { color: #005cc5; } /* Literal.Number.Oct */
+  .highlight .sb { color: #d14; } /* Literal.String.Backtick */
+  .highlight .sc { color: #d14; } /* Literal.String.Char */
+  .highlight .sd { color: #d14; } /* Literal.String.Doc */
+  .highlight .s2 { color: #032f62; } /* Literal.String.Double */
+  .highlight .se { color: #d14; } /* Literal.String.Escape */
+  .highlight .sh { color: #d14; } /* Literal.String.Heredoc */
+  .highlight .si { color: #d14; } /* Literal.String.Interpol */
+  .highlight .sx { color: #d14; } /* Literal.String.Other */
+  .highlight .sr { color: #009926; } /* Literal.String.Regex */
+  .highlight .s1 { color: #032f62; } /* Literal.String.Single */
+  .highlight .ss { color: #990073; } /* Literal.String.Symbol */
+  .highlight .bp { color: #999; } /* Name.Builtin.Pseudo */
+  .highlight .vc { color: #005cc5; } /* Name.Variable.Class */
+  .highlight .vg { color: #005cc5; } /* Name.Variable.Global */
+  .highlight .vi { color: #005cc5; } /* Name.Variable.Instance */
+  .highlight .il { color: #005cc5; } /* Literal.Number.Integer.Long */
+  
+  /* Python specific - ensure keywords stand out */
+  .language-python .kn { color: #d73a49; font-weight: bold; } /* import keyword */
+  .language-python .nn { color: #0086B3; } /* module name */
+  .language-python .n { color: #333333; } /* variable name */
+  .language-python .o { color: #333333; } /* operators */
+  .language-python .nb { color: #0086B3; } /* builtins */
+  .language-python .nf { color: #6f42c1; font-weight: bold; } /* function name */
+  .language-python .c1 { color: #6a737d; font-style: italic; } /* comments */
+  .language-python .s { color: #032f62; } /* strings */
+  .language-python .mi { color: #005cc5; } /* integers */
+  
+  /* Inline code styling */
+  p code, li code, td code {
+    background-color: #f5f5f5;
+    border: 1px solid #eee;
+    color: #d73a49;
+    padding: 2px 4px;
+    border-radius: 3px;
+    font-size: 0.9em;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  }
