--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -68,15 +68,25 @@
       transition: opacity 0.3s ease;
     }
     
+
     .grid-item:hover .grid-info {
       opacity: 1;
     }
     
     .grid-item:hover .grid-image {
-      transform: scale(1.15);
+      transform: scale(1.15) rotate(2deg);
       cursor: pointer;
+      filter: brightness(1.1) saturate(1.2) hue-rotate(10deg);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
     
+    .grid-item:hover {
+      z-index: 10;
+      animation: wiggle 0.5s ease-in-out;
+    }
+
+    
+
     .grid-image {
       width: 100%;
       height: 100%;
