less effect. it was too much
Signed-off-by: gangmuk <gangmuk@gmail.com>

--- a/_layouts/misc.html
+++ b/_layouts/misc.html
@@ -69,14 +69,15 @@
     }
     
 
+    
     .grid-item:hover .grid-info {
       opacity: 1;
     }
     
     .grid-item:hover .grid-image {
-      transform: scale(1.15) rotate(2deg);
+      transform: scale(1.15);
       cursor: pointer;
-      filter: brightness(1.1) saturate(1.2) hue-rotate(10deg);
+      filter: brightness(1.1) saturate(1.05);
       box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
     
